style.css
/* ... */
@media only screen and (max-width: 719px) {
	
	/* common */
	#nav-footer .nav { padding-bottom: 20px; }
	#nav-footer .nav li a { color: #666; border-top: 1px solid #e5e5e5; }	
	/* level 1 */
	#nav-footer .nav li > a:hover { background: #eee; color: #333; }
	#nav-footer .nav li.current_page_item > a, 
	#nav-footer .nav li.current-menu-item > a,
	#nav-footer .nav li.current-post-parent > a { background: #eee; color: #333; }
	
}


/* ------------------------------------------------------------------------- *
 *  Post Entry
/* ------------------------------------------------------------------------- */

/*  post : featured
/* ------------------------------------ */
#flexslider-featured { padding: 30px 0 30px; border-bottom: 1px solid #f2f2f2; z-index: 9; position: relative; }
#flexslider-featured .flex-direction-nav { height: 0; }
#flexslider-featured .flex-direction-nav a { color: #333; background: #eee; }
#flexslider-featured .flex-direction-nav a:before { color: #333; }
#flexslider-featured .flex-direction-nav li { margin-left: 0; }

#flexslider-featured .flex-control-nav { position: absolute; bottom: 10px; left: 2px; right: 0; top: auto; text-align: center; }
#flexslider-featured .flex-control-nav li { padding: 0; margin: 0 4px; }
#flexslider-featured .flex-control-nav li a { background: #ccc; width: 10px; height: 10px; text-indent: -999px; overflow: hidden;
-webkit-border-radius: 100%; border-radius: 100%; }
#flexslider-featured .flex-control-nav li a:hover {  }
#flexslider-featured .flex-control-nav li a.flex-active { background: #198cff; }

#flexslider-featured.featured,
#flexslider-featured.featured.flexslider { margin: 0; position: relative; }
#flexslider-featured.featured .post-inner { border-radius: 10px; }
#flexslider-featured.featured .post-title { font-size: 26px; border-radius: 0 0 10px 10px; background: rgba(0,0,0,0.4); position: absolute; bottom: 0; left: 0; right: 0; margin-bottom: 0; z-index: 9; padding: 20px; 
text-shadow: 0 1px 0 rgba(0,0,0,0.7);
box-shadow: 0 -1px 0 rgba(255,255,255,0.07), inset 0 1px 0 rgba(0,0,0,0.2), inset 0 -1px 0 rgba(0,0,0,0.3), inset 0 10px 10px rgba(0,0,0,0.1); }
#flexslider-featured.featured .post-title a { color: #fff; }
#flexslider-featured.featured li .post { padding: 0 50px; }
#flexslider-featured.featured .post-hover:hover .post-title a { color: #fff; }
#flexslider-featured.featured .post-comments { top: 14px; right: 14px; left: auto; bottom: auto; }
#flexslider-featured.featured .post-comments:hover { padding-right: 4px; padding-left: 0; }

/*  post : standard loop
/* ------------------------------------ */
.blog .post,
.archive .post,
.search .post,
.search .type-page { position: relative; margin-bottom: 0; }

/*  post : common
/* ------------------------------------ */
.post-thumbnail { width: 100%; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease; }
.post-thumbnail { position: relative; margin-bottom: 1em; }
.post-thumbnail img { display: block; width: 100%; height: auto; border-radius: 10px; }

.post-hover:hover .post-thumbnail { opacity: 0.75; }
.post-hover:hover .post-title a { color: #198cff; }
.post-hover:hover .thumb-icon { background: #fff; color: #333; }

.post-comments { background: rgba(0,0,0,0.7); font-size: 12px; line-height: 20px; color: rgba(255,255,255,0.8); display: block; position: absolute; bottom: 14px; left: 14px; border-radius: 30px; }
.post-comments > span { display: block; position: relative; padding: 2px 7px; }
.post-comments i { font-size: 16px; margin-right: 3px; }
.post-comments:hover { background: #fff; color: #333; padding-left: 4px; }

.post-title { font-size: 24px; line-height: 1.3em; font-weight: 600; letter-spacing: -0.5px; margin-bottom: 0; }
.post-title a { color: #333; }
.post-title a:hover { color: #198cff; }

article > .pad { padding-top: 50px; padding-bottom: 50px; }
.sticky {}

/*  post : search loop
/* ------------------------------------ */
.search .page .post-thumbnail,
.search .page .post-date,
.search .page .format-circle { display: none; }
.search .page.post-list .post-inner { padding-left: 0; }

/*  post : standard loop
/* ------------------------------------ */
.post-standard { border-bottom: 1px solid #eee; }
.post-standard .post-title { font-size: 38px; letter-spacing: -1px; line-height: 1.3em; } 
.post-standard .post-date { margin-bottom: 20px; }

.post-standard .format-circle { bottom: 40px; right: 50px; }
.more-link { font-weight: 600; display: block; margin-top: 20px; }


/*  post : grid loop
/* ------------------------------------ */
.post-grid {  }
.post-grid .post-row { padding: 30px 20px 30px 50px; float: left; border-bottom: 1px solid #eee; position: relative; display: flex; flex: 1 1 auto; flex-wrap: wrap; }
.post-grid .post-row:last-child { border: none; margin-bottom: 0; }
.post-grid .post,
.post-grid .page { width: 50%; float: left; }
.post-grid .post-inner { margin-right: 30px; }
.post-grid .post-title { font-size: 22px;  }
.post-grid .entry { font-size: 15px; color: #999; } 
.post-grid .format-circle { bottom: 0; right: 30px; }

/*  post : list loop
/* ------------------------------------ */
.blog .post-list, 
.single .post-list, 
.archive .post-list, 
.search .post-list { padding: 0 50px; }

.post-list .post-comments { right: 7px; left: auto; bottom: 7px; top: auto; }
.post-list .post-comments:hover { padding-right: 4px; padding-left: 0; }

.post-list .format-circle { right: 0; bottom: 0; }

.post-list .post-inner { padding: 30px 0 0 150px; }
.post-list .post-inner.no-thumbnail { padding-left: 0; }
.post-list .post-thumbnail { margin-left: -150px; max-width: 120px; margin-bottom: 0; float: left; }
.post-list .post-thumbnail img { position: relative; border-radius: 10px; }
.post-list .post-content { position: relative; }
.post-title { margin-bottom: 8px; }
.post-category { font-size: 14px; font-weight: 600; color: #bbb; margin-bottom: 8px; }
.post-list .entry { font-size: 15px; color: #999; margin-bottom: 8px; }
/* ... */

